2006-01-16  Stefan Jahn  <stefan@lkcc.org>

	* qucs_jp.ts: Updated Japanese translation.  Thanks to
	Toyoyuki.

	* dialogs/simmessage.cpp (slotDisplayMsg): Fixed progress
	bar parsing for Win32 platforms.

2006-01-14  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* qucsdigi script can run complete digital simulation
	* check time formats for VHDL standard
	* correct truth table simulation

2006-01-05  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* new component: coupler
	* timing diagram shows change of state at begin and end
	* new digital components: RS, D and JK flip flop
	* fixed bug that removed labels after subcircuit update
	* set subcircuit port attribut "analog" to "inout" (VHDL)

2006-01-04  Stefan Jahn  <stefan@lkcc.org>

	* qucs_tr.ts: Applied Turkish translations.  Thanks to
	Onur and Ozgur!

2005-12-30  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed errors for truth table in diagram dialog
	* new progress bar code for simulation
	* fixed memory leakage in 3D diagram
	* ground component now also in digital simulation

2005-12-03  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed segfault after invalid graph in 3D diagram
	* "qucsdigi" script for running digital simulation
	* digital components: output now first port
	* making digi_source analog, too

2005-11-26  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* in qucssettingsdialog: register filename extensions
	* new digital simulation mode: truth table

2005-11-11  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed bug: crash after inserting diagram into untitled doc
	* remove status line warning when closing project
	* fixed bug: wrong name for spice file components
	* fixed bug: crashes in 3D diagram
	* all graph types in 3D diagram now work
	* new diagram: truth table
	* new section in content listview: "Others" = no Qucs files

2005-11-05  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>
