@@ -1,3 +1,7 @@
+2006-01-22  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>
+
+	* if manual grid too small set it to whole length
+
 2006-01-16  Stefan Jahn  <stefan@lkcc.org>
 
 	* qucs_jp.ts: Updated Japanese translation.  Thanks to
